# GraphRAG-Viz

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  run_pipeline.py  tutorial.ipynb
app/: main.py  visualizer.py
data/raw/: book.txt
graphrag_viz/: __init__.py  cli.py  config.py  pipeline.py
graphrag_viz/core/: chunker.py  community_detector.py  extractor.py  graph_builder.py  query_engine.py  summarizer.py
graphrag_viz/visualization/: visualizer.py
src/: communities.py  config.py  pipeline.py  rag.py  utils.py
tests/: README.md  test_pipeline.py
